SM-145 DropDown detach from inputField and jumps in the bottom of the screen when open. Fix for dropdown panel position.

--- a/openFaces/source/META-INF/resources/openfaces/default.css
+++ b/openFaces/source/META-INF/resources/openfaces/default.css
@@ -1196,7 +1196,7 @@
 }
 
 .o_dateChooser_popup {
-    position: fixed; display: none;
+    position: absolute; display: none;
 }
 
 .o_dropdown_field {
@@ -1216,7 +1216,7 @@
 }
 
 .o_dropdownfield_list {
-  position: fixed;
+  position: absolute;
   visibility: hidden;
   display: none;
   overflow: auto;
